chore: remove support for aggregation method in plan features
